src/assets/styles/common.scss
@import "animations";
@import "variables";
@import 'react-toastify/dist/ReactToastify.css';
@import "fonts";

@import "helpers";
@import "mixins";
@import "responsive-mixins";
@import "responsive-display";
@import "normalize";

// components
@import "components/button";
@import "components/loader";
@import "components/form-controls";
@import "components/scrollbar";
@import "components/table";
@import "components/attachments";
@import "components/modal";
@import "components/card";
@import "components/drawer";
@import "components/tabs";
@import "components/list-screen";
@import "components/grid";
@import "components/drop-down-menu";

.app-version {
  font-size: 10px;
  position: fixed;
  bottom: 5px;
  right: 5px;
}

.auth-layout {
  width: 100vw;
  height: 100vh;
  background: url("./../../assets/images/auth-bgr.png");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;

  .logo-wrapper {
    height: auto;
    width: 160px;
    position: absolute;
    top: 30px;
    left: 15px;

    img {
      width: 100%;
      height: 100%;
    }


    @include lg() {
      top: 30px;
      left: 70px;
    }
  }

  .auth-wrapper {
    width: 350px;
    background: #fff;
    flex: 1 1;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    border-radius: 10px;
    position: absolute;
    padding: 20px;

    @include sm() {
      width: 400px;
    }

    @include md() {
      width: 400px;
      padding: 20px 40px;
    }

    @include lg() {
      padding: 40px 30px;
      left: unset;
      transform: translateY(-50%);
      width: 500px;
      right: 130px;
    }

    .auth-form {

      @include display-center();
      flex-direction: column;

      .auth-form-title {
        font-size: 24px;
        font-weight: $font-weight-bold;
        margin: 10px 0 30px 0;
        text-align: left;
      }

      .auth-form-sub-title {
        //text-align: center;
        margin: 30px 0;
        color: $black;
        opacity: 0.5;
      }
    }

  }
}

.app-layout {

  display: flex;

  .side-bar-holder {
    width: #{$side-bar-holder-width}px;
    min-width: #{$side-bar-holder-width}px;
    height: 100vh;
    background: $side-bar-holder-bg-color;
    position: relative;

    .logo-holder {
      height: #{$branding-holder-height}px;
      background: $branding-holder-bg-color;
      border-bottom: $branding-holder-border;
      @include display-center();
    }

    .side-menu-holder {
      margin: 20px 0;
    }

    &.default-view {

      .logo-sm {
        display: none;
      }
    }

    &.compact-view {

      width: 48px;
      min-width: 48px;
      transition: 0.2s width;

      .logo-default {
        display: none;
      }

      .menu-item {
        @include display-center();
        margin: 2px;
        padding: 8px;

        .menu-item-icon {
          margin: 2px;
        }
      }

      .menu-item-title {
        display: none;
      }

      .branding-component {
        width: 20px;
        height: auto;
      }
    }

    .side-menu-toggle-icon {
      position: absolute;
      bottom: 120px;
      right: -18px;
      background: #fff;
      padding: 5px;
      border-radius: 50%;
      display: flex;
      border: 1px solid #E1E1E1;
      box-shadow: 0 4px 4px rgb(0 83 79 / 23%);
      cursor: pointer;
      color: $side-bar-toggle-icon-color;
    }
  }

  .header-and-page-container {
    overflow: hidden;
    flex: 1;

    .header-holder {
      height: $header-height + px;
      width: 100%;
      background: $header-bg-color;
      display: flex;
      align-items: center;
      justify-content: space-between;
      padding: 0 20px;
      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);

    }

    .page-content-holder {
      background: $page-content-bg-color;
      padding: 20px;
      height: calc(100vh - #{$header-height}px);
      overflow-x: hidden;
      overflow-y: auto;
    }
  }
}

.icon-button {
  cursor: pointer;
}

.h-v-center {
  @include display-center();
}

.clear-fix {
  clear: both;
}

.horizontal-line {
  border-bottom: 1px solid black;
  opacity: 0.2;
  margin: 15px 0 30px 0;
}

.vertical-line {
  border-left: 1px solid black;
  opacity: 0.2;
  margin: 15px 0 30px 0;
}

.height-100 {
  height: 100%;
}

.t-drawer {

  .MuiDrawer-paper {

    padding: 20px;
    min-width: 500px;

    .drawer-header {
      display: flex;
      align-items: center;
      justify-content: space-between;

      .drawer-title {
        font-size: 24px;
        font-weight: 700;
      }

      .drawer-options {

      }
    }

    .drawer-body {
      padding: 10px 0;
    }
  }

}

.update-stock-modal {
  .modal-content-wrapper {
    width: 400px;
    display: flex;
    justify-content: center;
    align-items: center;

    .modal-body {
      width: 300px;
    }
  }
}

.notify-admin-modal {
  .modal-content-wrapper {
    width: 444px;
    display: flex;
    justify-content: center;
    align-items: center;

    .modal-body {
      width: 400px;
    }

    .form-control-label-component {
      .form-control-label {
        font-size: 16px;
      }
    }
  }
}

.all-body-body-parts-heading {
  .modal-content-wrapper .modal-header {
    .modal-title {
      font-size: 1.4286rem;
      font-weight: 700;
    }
  }
}

.t-side-bar-form {
  .drawer-container {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 546px;

    .drawer-body {
      display: flex;
      height: 100%;
      flex: 1;

      .service-category-add-component {
        display: flex;
        flex: 1;
        height: 100%;

        .service-category-add-form-container {
          display: flex;
          flex-direction: column;
          flex: 1;

          .t-form {
            height: 100%;
            display: flex;
            flex-direction: column;

            .t-form-controls {
              overflow: auto;
              flex: 1;
              padding: 5px 0;
            }
          }
        }
      }
    }
  }
}

.t-form {
  .form-helper-icon {
    position: relative;
    top: 15px;
  }

  .t-form-actions {
    margin: 20px 0;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .t-table {
    min-height: auto !important;
    height: auto !important;
  }
}


.link-provider-drawer-container {
  .link-provider-drawer {
    .link-provider-existing-list {
      margin: 20px 0;
      height: calc(100vh - 280px);
    }
  }
}

.chip {
  text-transform: capitalize;

  &.active {
    background: #BDE8CA;
    color: #00534F;
  }

  &.inactive {
    background: #F4F4F8;
    color: #787879;
  }

  &.completed {
    background: #E4F6EA;
    color: #00534F;
  }

  &.out_of_stock {
    background: #FFE2E9;
    color: #DE1C4E;
  }

  &.draft {
    background: #FFEDDD;
    color: #EF7300;
  }
}

.t-surgery-record-drawer {
  .drawer-container {
    height: 100%;
    display: flex;
    flex-direction: column;

    .drawer-body {
      display: flex;
      flex-direction: column;
      flex: 1;
      overflow: auto;

      .t-surgery-record-drawer-form-controls {
        overflow: auto;
        flex: 1;
        padding-top: 6px;
      }
    }
  }
}

.form-question-list {
  .form-question {
    border-bottom: 1px solid #ddd;
    min-height: 74px;

    .input-component {
      margin-bottom: 0 !important;
    }

    &:last-child {
      border-bottom: none;
    }
  }
}

.intervention-comments-modal, .intervention-body-side-selection-modal {
  .modal-content-wrapper {
    width: 600px !important;
  }
}

.confirmation-modal {
  .modal-content-wrapper {
    width: 444px !important;
  }
}

.intervention-special-test-config-add-body-part-modal, .intervention-rom-config-add-body-part-modal {
  .modal-content-wrapper {
    width: 900px;

    .radio-component {
      .MuiFormControlLabel-label {
        font-weight: $font-weight-bold;
      }
    }
  }
}


.font-weight-bold {
  font-weight: bold;
}


.add-progress-report-container {
  .t-form-controls {
    min-height: 300px;
    height: calc(100vh - 215px);
  }
}


.chip {
  font-weight: 500;

  &.no_show {
    background: #EFEFEF;
    color: #717171;
  }

  &.scheduled {
    background: #E8F2FF;
    color: #1C5EDE;
  }

  &.upcoming {
    background: #FFF7EA;
    color: #DE561C;
  }

  &.engaged {
    background: #BDE8CA;
    color: #00534F;
  }

  &.completed {
    background: #F5F7F8;
    color: #7583A6;
  }

  &.cancelled {
    background: #FFE2E9;
    color: #DE1C4E;
  }
}

.text-primary {
  color: $primary-color;
}

.text-error {
  color: $error-color;
}

.system-lock-wrapper {

  .MuiBackdrop-root {
    background-color: rgba(0, 0, 0, 0.2) !important;
    backdrop-filter: blur(5px) !important;
  }

  .modal-content-wrapper {
    width: 416px !important;
  }

  .t-form {
    @include display-center();
    flex-direction: column;

    .system-lock-back-navigation {
      position: absolute;
      top: 15px;
      left: 15px;
      display: flex;
      align-items: center;
      text-transform: uppercase;
      cursor: pointer;

      svg {
        height: 16px;
        width: 16px;
      }
    }

    .system-lock-icon {
      background: #F2F6F6;
      height: 84px;
      width: 84px;
      border-radius: 50%;
      @include display-center();
      margin-top: 15px;
      text-transform: uppercase;

      svg {
        width: 32px;
        height: 40px;
        color: $primary-color;
      }
    }

    .system-lock-title {
      font-weight: $font-weight-bolder;
      font-size: 1.1429rem;
      line-height: 22px;
      color: #212B36;
      margin: 20px 0 10px;
      text-transform: uppercase;
    }

    .system-lock-sub-title {
      font-weight: $font-weight-bold;
      font-size: 1rem;
      line-height: 22px;
      color: #6D6D6D;
      margin-bottom: 30px;
    }

    .system-lock-password-field {
      height: 95px;
      width: 100%;
    }

    .t-form-actions {

    }
  }
}

.mark-as-paid-outstanding-balance-modal {
  .modal-content-wrapper .modal-header {
    .modal-title {
      font-size: 20px;
      font-weight: 500;
    }
  }

  .modal-content-wrapper {

    .card-body {
      padding: 15px 25px 10px;

      .data-label {
        width: 150px;
      }

      .client-details-label {
        position: relative;
        top: -4px;
        margin-left: 5px;
      }
    }

    .mark-as-paid-total-outstanding-balance {
      margin-top: 18px;

      .data-label-value {
        justify-content: space-evenly;
      }

      .data-label, .data-value {
        font-weight: $font-weight-bold;
        color: $body-color !important;
      }
    }

    .t-table {
      height: calc(100vh - 500px);
      min-height: 300px;
      max-height: 800px;
    }

  }
}

.payment-mode-modal {
  .modal-content-wrapper {
    width: 416px !important;

    .modal-body {
      display: flex;
      flex-direction: column;
      align-items: center;

      .form-control-label-component {
        margin: 30px 0 15px;

        .form-control-label {
          text-transform: uppercase;
        }
      }
    }
  }
}

.billing-details-drop-down-menu {
  .MuiMenu-paper {
    margin-left: -5px;
  }
}

.incomplete-invoice-info-modal {
  .modal-content-wrapper {
    width: 416px !important;
    text-align: center;

    .modal-body {
      display: flex;
      flex-direction: column;
      align-items: center;

      .incomplete-invoice-icon {
        margin-bottom: 36px;
      }

      .incomplete-invoice-info-title {
        font-weight: $font-weight-bolder;
      }

      .incomplete-invoice-info-description {
        margin: 7px 0 20px;
        color: #6D6D6D;
        font-weight: $font-weight-bold;
      }
    }
  }
}

